--- a/userFolder/products/templates/products/home.html
+++ b/userFolder/products/templates/products/home.html
@@ -41,19 +41,17 @@
 </section>
 {% endif %}
 
-{% if products %}
 <section class="home-section">
     <h2 class="section-title">Shop By Category</h2>
     <div class="category-grid">
-        {% for product in products %}
-        <a href="{% url 'Product_card_view' product.slug %}" class="category-card">
-            <img src="{{ product.image_url }}" alt="{{ product.name }}">
+        {% for category in categories %}
+        <a href="{% url "Product_card_view" category.slug %}" class="category-card">
+            <span>{{category.category.name}}</span>
+            <img src="{{category.image_url}}" alt="{{category.name}}">
         </a>
         {% endfor %}
     </div>
 </section>
-{% endif %}
-
 {% if featured_products %}
 <section class="home-section">
     <h2 class="section-title">Featured Products</h2>
@@ -79,7 +77,7 @@
 </section>
 {% endif %}
 
-{% if most_demanded %}
+{% comment %} {% if most_demanded %}
 <section class="home-section">
     <h2 class="section-title">Most Demanded Accessories</h2>
     <div class="product-grid">
@@ -102,6 +100,6 @@
         {% endfor %}
     </div>
 </section>
-{% endif %}
+{% endif %} {% endcomment %}
 
 {% endblock content %}
