--- a/userFolder/products/templates/products/product_detail.html
+++ b/userFolder/products/templates/products/product_detail.html
@@ -12,6 +12,8 @@
     
     <div class="product-gallery">
         <div class="gallery-main img-zoom-container">
+
+            <span class="product-offer-tag">30% OFF</span>
             <img src="{{ product.image_url }}" alt="{{ product.name }}" id="main-product-image">
         </div>
         <div class="gallery-thumbnails">
