--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>TuckIndia.in - {% block title %}Home{% endblock %}</title>
+    <title>TuckIndia - {% block title %}Home{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href={% static "images/logo.jpg" %}>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -170,7 +170,7 @@
     </div>
     <header class="header">
         <nav class="navbar container">
-            <a href="/" class="logo">TuckIndia.in</a>
+            <a href="/" class="logo">TuckIndia</a>
 
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
